--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -16,4 +16,4 @@ phases:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
-      - docker push 357505600859.dkr.ecr.us-east-1.amazonaws.com/golang:$CODEBUILD_RESOLVED_SOURCE_VERSION
+      - docker push 357505600859.dkr.ecr.us-east-1.amazonaws.com/golang:latest
